--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <title>GHRtoCFR - GitHub Releases to Cloudflare R2</title>
-  <link rel="stylesheet" href="/styles/main.css">
+  <style>
+    {{CSS_CONTENT}}
+  </style>
 </head>
 <body>
   <h1>GitHub Releases to Cloudflare R2</h1>
@@ -45,6 +47,8 @@
     <div class="api-info">{{API_RATE_LIMIT}}</div>
   </div>
   
-  <script src="/scripts/main.js"></script>
+  <script>
+    {{JS_CONTENT}}
+  </script>
 </body>
 </html> 
