--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/svg+xml" href="./favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <title>GHRtoCFR - GitHub Releases to Cloudflare R2</title>
   <style>
     {{CSS_CONTENT}}
@@ -47,8 +47,6 @@
     <div class="api-info">{{API_RATE_LIMIT}}</div>
   </div>
   
-  <script>
-    {{JS_CONTENT}}
-  </script>
+  <script src="/scripts/main.js"></script>
 </body>
 </html> 
